# Math2021_Spring

./: .gitignore  CMakeLists.txt  CMakePresets.json  Math2021_Spring_1.cpp  Math2021_Spring_1.h  makefile  nprimes.cpp  nprimes.h
