# CMakeList.txt : CMake project for Math2021_Spring_1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Math2021_Spring_1")

set (CMAKE_CXX_STANDARD 17)

# Add source to this project's executable.
add_executable (Math2021_Spring_1 "Math2021_Spring_1.cpp" "Math2021_Spring_1.h")

# TODO: Add tests and install targets if needed.
